test/corpus/examples/ai/features/rms.txt
===
Rms
===

// our patch
adc => FFT fft =^ RMS rms => blackhole;

// set parameters
1024 => fft.size;
// set hann window
Windowing.hann(1024) => fft.window;

// control loop
while( true )
{
    // upchuck: take fft then rms
    rms.upchuck() @=> UAnaBlob blob;
    // print out RMS
    <<< blob.fval(0) >>>;

    // advance time
    fft.size()::samp => now;
}


---

(source_file
  (comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (keyword
            (global_unit_generator))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (int))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (comment)
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier))))
      (comment)
      (statement
        (debug_print
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier))
            (int))))
      (comment)
      (statement
        (chuck_operation
          (dur
            (function_call
              (member_identifier
                (variable_identifier)
                (variable_identifier)))
            (duration_identifier))
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
