test/corpus/examples/ai/features/rolloff.txt
=======
Rolloff
=======

// our patch
adc => FFT fft =^ RollOff roff50 => blackhole;
// a second rolloff
fft =^ RollOff roff85 => blackhole;

// set parameters
1024 => fft.size;
// set hann window
Windowing.hann(1024) => fft.window;
// compute srate
second / samp => float srate;
// set rolloff percents
.5 => roff50.percent;
.85 => roff85.percent;

// control loop
while( true )
{
    // upchuck: take fft then the rolloffs
    roff50.upchuck();
    roff85.upchuck();
    // print out
    <<< "50% rolloff:", roff50.fval(0) * srate / 2,
        "85% rolloff:", roff85.fval(0) * srate / 2 >>>;

    // advance time
    fft.size()::samp => now;
}


---

(source_file
  (comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (keyword
            (global_unit_generator))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (comment)
  (statement
    (chuck_operation
      (chuck_operation
        (variable_identifier)
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (int))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (binary_expression
        (keyword
          (duration_identifier))
        (operator)
        (keyword
          (duration_identifier)))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (float)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (statement
    (chuck_operation
      (float)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (comment)
      (statement
        (debug_print
          (string)
          (binary_expression
            (binary_expression
              (function_call
                (member_identifier
                  (variable_identifier)
                  (variable_identifier))
                (int))
              (operator)
              (variable_identifier))
            (operator)
            (int))
          (string)
          (binary_expression
            (binary_expression
              (function_call
                (member_identifier
                  (variable_identifier)
                  (variable_identifier))
                (int))
              (operator)
              (variable_identifier))
            (operator)
            (int))))
      (comment)
      (statement
        (chuck_operation
          (dur
            (function_call
              (member_identifier
                (variable_identifier)
                (variable_identifier)))
            (duration_identifier))
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
