test/corpus/examples/ai/features/rolloff2.txt
========
Rolloff2
========

// our patch
adc => FFT fft =^ RollOff roff50 => blackhole;
// a second rolloff
fft =^ RollOff roff85 => blackhole;

// set parameters
1024 => fft.size;
// set hann window
Windowing.hann(1024) => fft.window;
// compute srate
second / samp => float srate;
// set rolloff percents
.5 => roff50.percent;
.85 => roff85.percent;

// control loop
UAnaBlob blobby;
UAnaBlob blobert;
while( true )
{
    // upchuck: take fft then the rolloffs
    roff50.upchuck() @=> blobby;
    roff85.upchuck() @=> blobert;
    // print out
    <<< "50% rolloff:", blobby.fvals()[0] * srate / 2,
        "85% rolloff:", blobert.fvals()[0] * srate / 2 >>>;

    // advance time
    fft.size()::samp => now;
}

---

(source_file
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (keyword
            (global_unit_generator))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (variable_identifier)
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (int))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (binary_expression
        (keyword
          (duration_identifier))
        (operator)
        (keyword
          (duration_identifier)))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (float)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (statement
    (chuck_operation
      (float)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (variable_declaration
      (class_identifier)
      (variable_identifier)))
  (statement
    (variable_declaration
      (class_identifier)
      (variable_identifier)))
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (line_comment)
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (chuck_operator)
          (variable_identifier)))
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (chuck_operator)
          (variable_identifier)))
      (line_comment)
      (statement
        (debug_print
          (string)
          (binary_expression
            (binary_expression
              (array_identifier
                (function_call
                  (member_identifier
                    (variable_identifier)
                    (variable_identifier)))
                (int))
              (operator)
              (variable_identifier))
            (operator)
            (int))
          (string)
          (binary_expression
            (binary_expression
              (array_identifier
                (function_call
                  (member_identifier
                    (variable_identifier)
                    (variable_identifier)))
                (int))
              (operator)
              (variable_identifier))
            (operator)
            (int))))
      (line_comment)
      (statement
        (chuck_operation
          (dur
            (function_call
              (member_identifier
                (variable_identifier)
                (variable_identifier)))
            (duration_identifier))
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
